Fix icon click on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -162,6 +162,7 @@ input[type=reset] {
   .tooltip {
     position: relative;
     display: inline-block;
+    margin-left: 1%;
   }
   
   .tooltip .tooltiptext {
